# rareskills_evm_to_solana

./: .gitignore  README.md
24/other_write/: Anchor.toml
24/points/: Anchor.toml
26/change_owner/: Anchor.toml
26/crowdfund/: Anchor.toml
26/owner/: Anchor.toml
27/init_if_needed/: Anchor.toml
27/reinit_attack/: Anchor.toml
32/data_holder/: Anchor.toml
32/data_holder/programs/data_holder/: Cargo.toml
32/data_holder/programs/data_holder/src/: lib.rs
32/data_reader/: Anchor.toml
account_types/: Anchor.toml
account_types/tests/: account_types.ts
anchor-function-tutorial/: Anchor.toml
anchor-function-tutorial/tests/: anchor-function-tutorial.ts
arithmetic/: Anchor.toml
arithmetic/tests/: arithmetic.ts
balance/: Anchor.toml
balance/tests/: balance.ts
basic_storage/: Anchor.toml
basic_storage/tests/: basic_storage.ts
batch/: Anchor.toml  logs.txt
batch/tests/: batch.ts
bob/: Anchor.toml
bob/tests/: bob.ts
close_program/: Anchor.toml
close_program/tests/: close_program.ts
compute_unit/: Anchor.toml
compute_unit/tests/: compute_unit.ts
deploy_tutorial/: Anchor.toml
emit/: Anchor.toml
emit/tests/: emit.ts
example_map/: Anchor.toml
example_map/tests/: example_map.ts
func_test/: Anchor.toml
func_test/tests/: func_test.ts
func_visibility/: Anchor.toml
hello_world/: Anchor.toml
keypair_vs_pda/: Anchor.toml
learn_anchor_error/: Anchor.toml
macro_example/: Anchor.toml
rent/: Anchor.toml
sender/: Anchor.toml
sol_splitter/: Anchor.toml
sysvar/: Anchor.toml
sysvars/: Anchor.toml
tryrust/: Anchor.toml
(+74 files in other folders)
